tests/ui/traits/associated_type_bound/check-trait-object-bounds-6.stderr
error[E0271]: type mismatch resolving `<i32 as Is>::T == i64`
  --> $DIR/check-trait-object-bounds-6.rs:20:12
   |
LL |     is_obj(x)
   |     ------ ^ type mismatch resolving `<i32 as Is>::T == i64`
   |     |
   |     required by a bound introduced by this call
   |
note: expected this to be `i64`
  --> $DIR/check-trait-object-bounds-6.rs:9:14
   |
LL |     type T = U;
   |              ^
note: required by a bound in `is_obj`
  --> $DIR/check-trait-object-bounds-6.rs:17:23
   |
LL | fn is_obj<T: ?Sized + Obj>(_: &T) {}
   |                       ^^^ required by this bound in `is_obj`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
